--- a/appinfo.json
+++ b/appinfo.json
@@ -17,6 +17,16 @@
 		"type": "png",
 		"name": "IMAGE_MENU_ICON",
 		"file": "images/appicon.png"
+		},
+		{
+			"type": "png",
+			"name": "REFRESH_ICON",
+			"file": "images/refresh.png"
+		},
+		{
+			"type": "png",
+			"name": "STAR_ICON",
+			"file": "images/star.png"
 		}
     ]
   }
